NavBar V2 and HomePage V1
Initial design of the home page and navigation panel

--- a/WorkWise/WorkWise.csproj
+++ b/WorkWise/WorkWise.csproj
@@ -22,4 +22,8 @@
     <None Include="Pages\Info.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\HomePage\" />
+  </ItemGroup>
+
 </Project>
