Updete HomePage and add SingIn page

--- a/WorkWise.Test/WorkWise.Test.csproj
+++ b/WorkWise.Test/WorkWise.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -11,6 +11,11 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WorkWise.Databases\WorkWise.Database.csproj" />
+    <ProjectReference Include="..\WorkWise.Model\WorkWise.Model.csproj" />
   </ItemGroup>
 
 </Project>
