--- a/WorkWise.Test/WorkWise.Test.csproj
+++ b/WorkWise.Test/WorkWise.Test.csproj
@@ -4,11 +4,14 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ApplicationInsightsResourceId>/subscriptions/5c49a826-7b9c-498f-9f5e-1b08f1c8155a/resourceGroups/WorkWise/providers/microsoft.insights/components/ApplicationInsights</ApplicationInsightsResourceId>
+    <UserSecretsId>3aa94a0d-e56a-4bac-a94a-37c249cce057</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.21.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.15.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
