--- a/WorkWise.Databases/WorkWise.Database.csproj
+++ b/WorkWise.Databases/WorkWise.Database.csproj
@@ -34,4 +34,8 @@
     <ProjectReference Include="..\WorkWise.Model\WorkWise.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
