--- a/WorkWise.Test/WorkWise.Test.csproj
+++ b/WorkWise.Test/WorkWise.Test.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.21.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.21.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
@@ -22,13 +23,6 @@
     <PackageReference Include="Microsoft.TestPlatform.Portable" Version="17.5.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\WorkWise.Core\WorkWise.Core.csproj" />
-    <ProjectReference Include="..\WorkWise.Databases\WorkWise.Database.csproj" />
-    <ProjectReference Include="..\WorkWise.Model\WorkWise.Model.csproj" />
-    <ProjectReference Include="..\WorkWise\WorkWise.csproj" />
   </ItemGroup>
 
 </Project>
